# WebChat2KnowledgeBase

./: .gitignore  README.md  main.py  pyproject.toml
CrawlBrowser/: crawlChat.py
CrawlBrowser/config/: crawler_config.py
CrawlBrowser/crawlers/: base_crawler.py  crawlers.py
agents/prompts/: prompts.py
agents/workflow/parser/: __init__.py  exceptions.py
agents/workflow/parser/core/: base.py  factory.py
agents/workflow/parser/parsers/: qwen_parser.py
agents/workflow/parser/utils/: text_handler.py
test/: crawler_test.py  test_llm_client.py  test_parser.py
utils/: llm_client.py
